UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCircuits__c/FTRWSCircuits__c.object-meta.xml
<CustomObject>
    <label>FTRWSCircuits</label>
    <nameField>
        <displayFormat>FTRWSC-{000000}</displayFormat>
        <label>FTRWSCircuits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTRWSCircuits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>