UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCircuits__c/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <label>Circuit ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>