UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCircuits__c/fields/UNI_BD_Width__c.field-meta.xml
<CustomField>
    <fullName>UNI_BD_Width__c</fullName>
    <description>Uni bandwidth value derived based on the UNI_NNI_NC mapping</description>
    <formula>IF(NOT(ISBLANK(UNI_NNI_NC__c)) ,  IF(CONTAINS(UNI_NNI_NC__c, &quot;KQ&quot;) , &quot;100Mbps&quot;,  IF(CONTAINS(UNI_NNI_NC__c, &quot;KR&quot;), &quot;1Gbps&quot;,IF(CONTAINS(UNI_NNI_NC__c, &quot;KS&quot;), &quot;10Gbps&quot;,  IF(CONTAINS(UNI_NNI_NC__c, &quot;KU&quot;),&quot;100Gbps&quot;,  &quot;&quot;) ) ) ), &quot;&quot;)</formula>
    <label>UNI BDW</label>
    <type>Text</type>
</CustomField>