UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCircuits__c/fields/UNI_NNI_NC__c.field-meta.xml
<CustomField>
    <fullName>UNI_NNI_NC__c</fullName>
    <label>UNI/NNI NC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>