UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSCircuits__c/fields/Wholesale_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Service_Order__c</fullName>
    <label>Wholesale Service Order</label>
    <referenceTo>Wholesale_Service_Order__c</referenceTo>
    <relationshipLabel>FTRWSCircuits</relationshipLabel>
    <relationshipName>FTRWSCircuits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>